TestSuite/errors/err0364.pas
// #2250
var t: (real,real,real,real,real,real,real,real);

begin
end.